--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p{
 .link-butt{
                                    text-decoration: none;
                                    background-color: #f3503e;
-                                   padding: 10px 25px;
+                                   padding: 20px 25px;
                                    border-radius: 7px;
                                    background-image: linear-gradient(45deg,#f3503e , tomato);
                                    color: white;
@@ -89,4 +89,18 @@ span{color:#f3503e ;}
                                    background-color: #FFFFF0;
                                    border-radius: 18px;
                                   
+}
+.Dec-wi-li{
+                                   display: flex;
+                                   margin-bottom: 0px;              
+}
+.baby-div-1 {
+                                   width: 30%;
+                                   padding-left: 10%;
+}
+.baby-div-2{
+
+}
+.baby-div-1 img{ 
+                                   width: 75%;
 }
